# PyMyers

./: .gitignore  README.md  debug.py  myers.py  pyproject.toml  run.sh  test_.py
pymyers/: __init__.py  debug.py  myers.py
tests/: test_main.py
tests/log-myers-2022-12-21-18:19:11/: a0.pickle  b2.pickle  b3.pickle  b4.pickle
